# Super8_Super_Scanner

./: LICENSE  README.md
BTT SKR1.3 files/Configurations-bugfix-2.1.x/: README.txt
Marlin configs/: Configuration.h  Configuration_adv.h
Marlin-bugfix-2.1.x/: README.txt
Marlin-bugfix-2.1.x/Marlin-bugfix-2.1.x/Marlin/: Configuration.h
STL build files/Film gate/: Arm bottom left.stl  Arm bottom right.stl  Arm top left.stl  Arm top right.stl  Center Base.stl  Film cap.stl  Gate main body.stl  Pressure plate left.stl  Pressure plate right.stl
STL build files/Idler reel right/: Bottom bearing cap.stl  Idler base.stl  Idler feed base spool.stl  Idler frame right.stl  Inter-bearing spacer.stl  Side bearing cap.stl  Side bearing spur.stl
STL build files/LED MR16 light/: Alignment Sight.stl  Diffuser Cradle.stl  Diffuser Front.stl  Diffuser Rear.stl  Diffuser cut guide.stl  LED forcus cone.stl  LED frame mount.stl  LED mount ring rear.stl
STL build files/Microscope and Pi Mount/: Camera rear PCB mount.stl  Focus Arm Left.stl  Focus Arm Right.stl  Microscope Lense Mount Front.stl  Pi5 Mount.stl  Power Button Lever.stl
STL build files/Stepper mounts/: Film pulleys x6.stl  Left stepper mount.stl  Right stepper mount.stl  Sprocket 20 frame.stl  Sprocket bottom.stl  Sprocket height spacer.stl  Sprocket top notch guide.stl  Takeup pressure arm bottom.stl  Takeup pressure arm top.stl  Takeup pressure wheel.stl  Takeup strpper pressure base.stl
STL build files/Takeup reel left/: Reel takeup bottom.stl  Reel takeup top 3 inch.stl  Reel takeup top 7 inch.stl  Takeup Frame Left.stl  Takeup reel base.stl
code/LCCV-main/example/: takephoto.cpp
code/LCCV-main/include/: lccv.hpp  libcamera_app.hpp  libcamera_app_options.hpp
code/LCCV-main/scanner_backup/: CMakeLists.txt
code/LCCV-main/scanner_backup/src/: MarlinController.cpp  MarlinController.h  backup4-19-25  backupCV.cpp  backup_qt_cv.cpp  cv_working.cpp  main.cpp
code/LCCV-main/src/: lccv.cpp  (+2 more)
(+766 files in other folders)
